--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CoolWeather</string>
+    <string name="forecast">五日内天气</string>
+    <string name="Shzs">生活指数</string>
+    <string name="kt">空调</string>
+    <string name="zwx">紫外线指数</string>
+    <string name="gm">感冒</string>
+    <string name="ly">旅游指数</string>
 </resources>
